# manifest-contracts

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
contracts/converter/: Cargo.toml  README.md
contracts/converter/src/: consts.rs  contract.rs  denom.rs  error.rs
contracts/converter/tests/: convert.rs  query.rs  update_config.rs
contracts/converter/tests/common/: mod.rs
converter/: Cargo.toml
converter/src/: consts.rs  contract.rs  denom.rs  error.rs  lib.rs  msg.rs  rate.rs  state.rs
converter/tests/: convert.rs  instantiate.rs  query.rs  update_admin.rs  update_config.rs
converter/tests/common/: mod.rs
