[workspace]
members = [
  "contracts/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
bech32 = "0.11"
const_format = "0.2"
cw2 = "3"
cw-controllers = "3"
prost = "0.14.1"
cosmwasm-std = { version = "3", features = ["cosmwasm_2_2"] }
cosmwasm-schema = "3"
cw-utils = "3"
serde = { version = "1", features = ["derive"] }
cw-storage-plus = "3"
manifest-std = "0.2.0"
thiserror = "2"
cw-multi-test = { version = "3", features = ["cosmwasm_2_2"] }
rstest = "0.26"
serde_json = "1"
strum_macros = "0.27"

[profile.release.package.converter]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
