[package]
name = "converter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A CosmWasm contract for converting between different token standards."
repository = "https://github.com/manifest-network/manifest-contracts"
homepage = "https://manifest.network"
keywords = ["blockchain", "web3", "cosmwasm", "manifest"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bech32 = { workspace = true }
const_format = { workspace = true }
cw2 = { workspace = true }
cw-controllers = { workspace = true }
prost = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-utils = { workspace = true }
serde = { workspace = true }
cw-storage-plus = { workspace = true }
manifest-std = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
strum_macros = { workspace = true }

[features]
library = []
